ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-assistant
  name: home-assistant
  labels:
    app: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test-nvr.dev.lsst.org
      secretName: home-assistant-tls
  rules:
    - host: test-nvr.dev.lsst.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  name: http
